--- a/style.css
+++ b/style.css
@@ -1,34 +1,45 @@
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
 
 
 
-#body {
-    background: rgb(111, 98, 126);
+
+body {
+    background: rgb(150, 150, 150);
    
   }
   
 
 
 
-
-
-
-
-
-
   .box-header1{
-    
-    background: rgb(229, 206, 255);
-    padding: 20px; 
-    height:42.5px ;
+    position: relative;
+    bottom: -30px;
+    left: 895px;
+    box-shadow: 10px 10px 15px rgba(0,0,0,.5);
+    padding: 20px;
+    border: 10px solid rgba(255,255,255,.2);
+    border-radius:  5px; 
+    transform: translate(-50%,-50%);
     
    }
 
-.box-header1 h1{
+
+
+.divfade{
+  
+  width: 900px;
+  height: 900px;
+  box-shadow: 10px 10px 15px rgba(0,0,0,.5);
+  position: absolute;
+  border: 10px solid rgba(255,255,255,.2);
+  top: 95%;
+  left: 50%;
+  border-radius:  5px; 
+  transform: translate(-50%,-50%);
+  
+
+   }  
+
+   .box-header1 h1{
     
     position: relative;
     bottom:18px ;
@@ -39,59 +50,28 @@
    
 }
 
-
-.divpic{
-    height: 800px;
-    width: 100%;
-    margin-bottom: 25px;
-    background-image: url("amirash.jpg");
-    background-size: cover;
-    background-position: center;
-}
-
-
-
-
-
-
-
-
-
-  #div1 {
-      position: relative;
-      bottom:-25px ;
-      right: -25px;
    
-    background:rgb(111, 98, 126);
+
+
+
+
+footer .box-header2{
+  position: relative;
+  top: 30px;
+  left: 895px;
+  box-shadow: 10px 10px 15px rgba(0,0,0,.5);
+  padding: 20px;
+  border: 10px solid rgba(255,255,255,.2);
+  border-radius:  5px; 
+  transform: translate(-50%,-50%);
   
-    box-shadow: 1px 1px 15px #000000;
+ }
+
+
+
+
+
+
+
   
-    
-   
-    height: 300px;
-    width: 220px;
-    
  
-  }
-  
- #div1 h2{
-    position: static;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: black;
-    font-size: 15px;
-    
-
-}
-
-  #div1 img{
-      position: relative;
-      bottom:-8px ;
-      right: -7px;
-  }
-  
-  #aside1 {
-      position: fixed;
-    background: rgb(229, 206, 255);
-    height: 300px;
-    width: 850px;
-  }
