--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ body, html {
 
 
 
+
   .in-box:after {
     content: "";
     display: block;
@@ -68,15 +69,36 @@ body, html {
   .inside{
   position: absolute;
   top: 5%;
-  right: 50%;
+  right: 52%;
 
   width: 46%;
   height: 89%;
 
   border: 2px solid rgba(255, 255, 255, 0.068);
   border-radius:  5px;
+  background-color: rgba(70, 103, 109, 0.603);
+  }
 
-   }
+  .inside-name:after {
+    content: "";
+    display: block;
+    padding-top: 50%;
+
+  }
+
+  .name{
+  position: absolute;
+  top: 43%;
+  right: 32%;
+
+  margin: .5em auto;
+
+  text-align: center;
+  font-family: 'Rubik', sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  color: black;
+  }
 
 
 
@@ -85,7 +107,7 @@ body, html {
 
 
 
-  .boxit:after {
+  .in-box:after {
     content: "";
     display: block;
     /*padding-top: 50%;*/
@@ -94,7 +116,7 @@ body, html {
   .inside2{
   position: absolute;
   top: 5%;
-  right: 4%;
+  right: 2%;
 
   width: 46%;
   height: 89%;
@@ -103,41 +125,32 @@ body, html {
   border: 2px solid rgba(255, 255, 255, 0.068);
   border-radius:  5px;
 
-  -webkit-transition: all 1s ease ;
-  -moz-transition: all 1s ease ;
-  -ms-transition: all 1s ease ;
-  -o--transition: all 1s ease ;
-  transition: all 1s ease ;
-   }
-
-  .inside2:hover{
-    background-color:rgb(100, 180, 175);
-    -webkit-opacity: 0.25;
-    -moz-opacity: 0.25;
-    opacity: 0.25;
+  background-color: rgba(70, 103, 109, 0.603);
   }
 
 
 
 
 
-
-
-  .inside-name:after {
+  .inside2:after {
     content: "";
     display: block;
-    /*padding-top: 50%;*/
-    clear: both;
+    padding-top: 50%;
+
   }
 
-  .name{
+  .list{
   position: absolute;
-  top: 43%;
-  right: 11%;
-  content: inherit;
+  top: 24%;
+  right: 36%;
 
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  
   text-align: center;
   font-family: 'Rubik', sans-serif;
-  font-size: 25px;
+  font-size: 20px;
+  font-weight: bold;
   color: black;
-
+  }
